k8s/shared/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: event-manager-app
  labels:
    environment: production
    app: event-manager
